SERVER-100142 Fallback from CBR on sort key generator stage (#31836)

GitOrigin-RevId: 059a37b41b2233a385fc4ea915c04620fa0a7087