src/mongo/db/query/cost_based_ranker/cardinality_estimator.cpp
@@ -143,6 +143,7 @@ CEResult CardinalityEstimator::estimate(const QuerySolutionNode* node) {
         case STAGE_TEXT_MATCH:
         case STAGE_GEO_NEAR_2D:
         case STAGE_GEO_NEAR_2DSPHERE:
+        case STAGE_SORT_KEY_GENERATOR:
         case STAGE_RETURN_KEY: {
             // These stages will fallback to multiplanning.
             return Status(ErrorCodes::UnsupportedCbrNode, "encountered unsupported stages");
@@ -161,7 +162,6 @@ CEResult CardinalityEstimator::estimate(const QuerySolutionNode* node) {
         case STAGE_RECORD_STORE_FAST_COUNT:
         case STAGE_REPLACE_ROOT:
         case STAGE_SAMPLE_FROM_TIMESERIES_BUCKET:
-        case STAGE_SORT_KEY_GENERATOR:
         case STAGE_SPOOL:
         case STAGE_SUBPLAN:
         case STAGE_TIMESERIES_MODIFY:
